# Boom

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix  run.sh  setup-vcpkg.sh  vcpkg.json
cmake/: FindGLM.cmake
data/shaders/: lighting.frag  lighting.vert
include/: color.hpp  light.hpp  vector.hpp
src/: CMakeLists.txt  game.cpp  light.cpp  text.cpp  text.hpp
